--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -12,6 +12,9 @@
           <a class="nav-link active" aria-current="page" routerLink="/Clients" routerLinkActive="active" >Clients</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="/TBUser" routerLinkActive="active" >TBClients</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link active" aria-current="page" routerLink="/Calls" routerLinkActive="active" >clientCalls</a>
         </li>
       </ul>
